Ajustando a largura do container_formulario

--- a/css/style.css
+++ b/css/style.css
@@ -646,7 +646,7 @@ header {
     position: relative;
     background-color: #DEDEDE;
     height: 250px;
-    width: 80%;
+    width: 1200px;
     border-radius: 10px;
     display: flex;
     align-items: center;
